--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/partials/header.css">
   <link rel="stylesheet" href="styles/partials/page-landing.css">
   
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
@@ -29,12 +30,12 @@
 
 
     <div class="buttons-container">
-      <a class="study" href="/study">
+      <a class="study" href="study.html">
         <img src="images/icons/study.svg" alt="Estudar">
         Estudar
       </a>
 
-      <a class="give-classes" href="/give-classes">
+      <a class="give-classes" href="give-classes.html">
         <img src="images/icons/give-classes.svg" alt="Dar aulas">
         Dar aulas
       </a>
